carousel heading text change

--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
                   class="carousel-caption d-flex justify-content-center align-items-center"
                 >
                   <div>
-                    <h1>Second slide label</h1>
+                    <h1>Discover 4500+ Courses from top Instructors</h1>
                     <p>
-                      Some representative placeholder content for the second
-                      slide.
+                      Take your learning organization to the next level. to the next level. Who'll share their knowledge to people around the world.
                     </p>
                     <button class="btn btn-primary">Get Started</button>
                   </div>
@@ -104,10 +103,9 @@
                   class="carousel-caption d-flex justify-content-center align-items-center"
                 >
                   <div>
-                    <h1>Second slide label</h1>
+                    <h1>Discover World's Best Courses</h1>
                     <p>
-                      Some representative placeholder content for the second
-                      slide.
+                      Take your learning organization to the next level. to the next level. Who'll share their knowledge to people around the world.
                     </p>
                     <button class="btn btn-primary">Get Started</button>
                   </div>
@@ -126,10 +124,9 @@
                   class="carousel-caption d-flex justify-content-center align-items-center"
                 >
                   <div>
-                    <h1>Second slide label</h1>
+                    <h1>Transform Your Life Through Education</h1>
                     <p>
-                      Some representative placeholder content for the second
-                      slide.
+                      Take your learning organization to the next level. to the next level. Who'll share their knowledge to people around the world.
                     </p>
                     <button class="btn btn-primary">Get Started</button>
                   </div>
@@ -450,7 +447,6 @@
               height="40px"
               alt="facebook"
               class="social-icon"
-              style="color: white"
             />
             <img
               src="./images/social-icon/twitter.png"
