--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     />
                   </div>
                   <div class="col-lg-8 col-md-8 col-sm-12 text-start p-3">
-                    <h4>Fundamental Of UI/UX Design</h4>
+                    <h4>Python for Financial Analysis</h4>
                     <p>
                       Some quick example text to build on the card title and
                       make up the bulk of the card.
@@ -215,7 +215,7 @@
                     />
                   </div>
                   <div class="col-lg-8 col-md-8 col-sm-12 text-start p-3">
-                    <h4>Fundamental Of UI/UX Design</h4>
+                    <h4>Python and Django Developer</h4>
                     <p>
                       Some quick example text to build on the card title and
                       make up the bulk of the card.
@@ -234,7 +234,7 @@
                     />
                   </div>
                   <div class="col-lg-8 col-md-8 col-sm-12 text-start p-3">
-                    <h4>Fundamental Of UI/UX Design</h4>
+                    <h4>ML Hands-On Python</h4>
                     <p>
                       Some quick example text to build on the card title and
                       make up the bulk of the card.
@@ -253,7 +253,7 @@
                     />
                   </div>
                   <div class="col-lg-8 col-md-8 col-sm-12 text-start p-3">
-                    <h4>Fundamental Of UI/UX Design</h4>
+                    <h4>Real-Life DS Exercises</h4>
                     <p>
                       Some quick example text to build on the card title and
                       make up the bulk of the card.
@@ -416,9 +416,9 @@
           </div>
         </div>
       </section>
-      <section class="container my-5">
-        <div class="row">
-          <div class="col-lg-12 col-md-0 col-sm-0 text-center">
+      <section class="container my-5 ">
+        <div class="row d-none d-lg-block d-xl-block">
+          <div class="col-lg-12 col-md-12 col-sm-0 text-center">
             <h1>Trusted by over 800+ companies</h1>
           </div>
           <div class="col-lg-12 col-md-0 col-sm-0">
