ready to join section added

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
           </button>
         </div>
       </section>
+      <!--Courses start-->
       <section class="container my-5">
         <div
           class="row text-center d-flex justify-content-center align-items-center flex-column"
@@ -284,7 +285,24 @@
             </div>
           </div>
         </div>
+        <div class="d-flex justify-content-center my-5">
+          <button type="button" class="btn btn-primary">See More Courses</button>
+        </div>
       </section>
+         <!--Courses end-->
+         <!--ready to join start-->
+         <section class="container my-5 bg-primary p-5 border-0 rounded">
+          <div class="row">
+            <div class="col-lg-6 col-md-12 col-sm-12 text-white">
+              <h2>Ready to join?</h2>
+              <p>Helping employees gain skills and providing career development often take a back seat to business priorities but workplace better right now. </p>
+            </div>
+            <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center align-items-center">
+              <button type="button" class="btn btn-light py-2 px-4"><b>Register Now</b></button>
+            </div>
+          </div>
+         </section>
+         <!--ready to join start-->
       <section class="container my-5">
         <div
           class="row text-center d-flex justify-content-center align-items-center flex-column"
