--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Courses</a>
+                <a class="nav-link" href="#courses">Courses</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link">Deals</a>
+                <a class="nav-link" href="#faq">Faq</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link">Success</a>
+                <a class="nav-link" href="#company">Success</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link">Register</a>
+                <a class="nav-link" href="#register">Register</a>
               </li>
             </ul>
-            <button class="btn btn-outline-primary py-2 px-3" type="submit">
+            <button class="btn btn-outline-primary py-2 px-3" type="submit" data-bs-toggle="modal" data-bs-target="#exampleModal">
               <b>Register</b>
             </button>
           </div>
@@ -63,7 +63,7 @@
       </nav>
     </header>
     <main>
-      <section class="container my-5">
+      <section class="container my-5" id="home">
         <div
           id="carouselExampleControls"
           class="carousel slide my-5"
@@ -155,7 +155,7 @@
         </div>
       </section>
       <!--Courses start-->
-      <section class="container my-5">
+      <section class="container my-5" id="courses">
         <div
           class="row text-center d-flex justify-content-center align-items-center flex-column"
         >
@@ -291,19 +291,47 @@
       </section>
          <!--Courses end-->
          <!--ready to join start-->
-         <section class="container my-5 bg-primary p-5 border-0 rounded">
+         <section class="container my-5 bg-primary p-5 border-0 rounded" id="register">
           <div class="row">
             <div class="col-lg-6 col-md-12 col-sm-12 text-white">
               <h2>Ready to join?</h2>
               <p>Helping employees gain skills and providing career development often take a back seat to business priorities but workplace better right now. </p>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center align-items-center">
-              <button type="button" class="btn btn-light py-2 px-4"><b>Register Now</b></button>
+              <!-- Button trigger modal -->
+              <button type="button" class="btn btn-light py-2 px-4" data-bs-toggle="modal" data-bs-target="#exampleModal"><b>Register Now</b></button>
             </div>
+            <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Registration</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+       <form>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1">
+  </div>
+</form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
+  </div>
+</div>
           </div>
          </section>
          <!--ready to join start-->
-      <section class="container my-5">
+      <section class="container my-5" id="faq">
         <div
           class="row text-center d-flex justify-content-center align-items-center flex-column"
         >
@@ -434,7 +462,7 @@
           </div>
         </div>
       </section>
-      <section class="container my-5 ">
+      <section class="container my-5" id="company">
         <div class="row d-none d-lg-block d-xl-block">
           <div class="col-lg-12 col-md-12 col-sm-0 text-center">
             <h1>Trusted by over 800+ companies</h1>
