--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <header>
@@ -170,14 +171,14 @@
             <div class="row row-cols-lg-2 row-cols-md-1 row-cols-1 g-2 g-lg-4">
               <div class="col">
                 <div class="row g-0 border rounded-2">
-                  <div class="col-lg-4 col-md-4 col-sm-12">
+                  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                     <img
                       src="./images/course/course-1.png"
-                      class="img-fluid"
+                      class="img-fluid rounded-start course-img"
                       alt=""
                     />
                   </div>
-                  <div class="col-lg-8 col-md-8 col-sm-12 text-start p-3">
+                  <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 text-start p-3">
                     <h4>Fundamental Of UI/UX Design</h4>
                     <p>
                       Some quick example text to build on the card title and
@@ -189,14 +190,14 @@
               </div>
               <div class="col">
                 <div class="row g-0 border rounded-2">
-                  <div class="col-lg-4 col-md-4 col-sm-12">
+                  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                     <img
                       src="./images/course/course-1.png"
-                      class="img-fluid"
+                      class="img-fluid course-img"
                       alt=""
                     />
                   </div>
-                  <div class="col-lg-8 col-md-8 col-sm-12 text-start p-3">
+                  <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 text-start p-3">
                     <h4>Python for Financial Analysis</h4>
                     <p>
                       Some quick example text to build on the card title and
@@ -208,14 +209,14 @@
               </div>
               <div class="col">
                 <div class="row g-0 border rounded-2">
-                  <div class="col-lg-4 col-md-4 col-sm-12">
+                  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                     <img
                       src="./images/course/course-1.png"
-                      class="img-fluid"
+                      class="img-fluid course-img"
                       alt=""
                     />
                   </div>
-                  <div class="col-lg-8 col-md-8 col-sm-12 text-start p-3">
+                  <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 text-start p-3">
                     <h4>Python and Django Developer</h4>
                     <p>
                       Some quick example text to build on the card title and
@@ -227,14 +228,14 @@
               </div>
               <div class="col">
                 <div class="row g-0 border rounded-2">
-                  <div class="col-lg-4 col-md-4 col-sm-12">
+                  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                     <img
                       src="./images/course/course-1.png"
-                      class="img-fluid"
+                      class="img-fluid course-img"
                       alt=""
                     />
                   </div>
-                  <div class="col-lg-8 col-md-8 col-sm-12 text-start p-3">
+                  <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 text-start p-3">
                     <h4>ML Hands-On Python</h4>
                     <p>
                       Some quick example text to build on the card title and
@@ -246,14 +247,14 @@
               </div>
               <div class="col">
                 <div class="row g-0 border rounded-2">
-                  <div class="col-lg-4 col-md-4 col-sm-12">
+                  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                     <img
                       src="./images/course/course-1.png"
-                      class="img-fluid"
+                      class="img-fluid course-img"
                       alt=""
                     />
                   </div>
-                  <div class="col-lg-8 col-md-8 col-sm-12 text-start p-3">
+                  <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 text-start p-3">
                     <h4>Real-Life DS Exercises</h4>
                     <p>
                       Some quick example text to build on the card title and
@@ -265,14 +266,14 @@
               </div>
               <div class="col">
                 <div class="row g-0 g-sm-0 border rounded-2">
-                  <div class="col-lg-4 col-md-4 col-sm-12">
+                  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                     <img
                       src="./images/course/course-1.png"
-                      class="img-fluid"
+                      class="img-fluid course-img"
                       alt=""
                     />
                   </div>
-                  <div class="col-lg-8 col-md-8 col-sm-12 text-start p-3">
+                  <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 text-start p-3">
                     <h4>Fundamental Of UI/UX Design</h4>
                     <p>
                       Some quick example text to build on the card title and
