social icon added

--- a/index.html
+++ b/index.html
@@ -493,28 +493,28 @@
               width="40px"
               height="40px"
               alt="facebook"
-              class="social-icon"
+              class="bg-white border border-secondary rounded-circle mx-1"
             />
             <img
               src="./images/social-icon/twitter.png"
               width="40px"
               height="40px"
               alt="twitter"
-              class="social-icon"
+              class="bg-white border border-secondary rounded-circle mx-1"
             />
             <img
               src="./images/social-icon/linkedin.png"
               width="40px"
               height="40px"
               alt="linkedin"
-              class="social-icon"
+              class="bg-white border border-secondary rounded-circle mx-1"
             />
             <img
               src="./images/social-icon/tiktok.png"
               width="40px"
               height="40px"
               alt="tiktok"
-              class="social-icon"
+              class="bg-white border border-secondary rounded-circle mx-1"
             />
           </div>
         </div>
